--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
             "Database\\Seeders\\": "database/seeders/"
         },
         "files": [
-            "./app/Helpers/is_admin.php"
+            "./app/Helpers/user_functions.php"
         ]
     },
     "autoload-dev": {
